Perkin-UAT/force-app/main/default/objects/B2B_Shopping_List__c/B2B_Shopping_List__c.object-meta.xml
<CustomObject>
    <label>B2B Shopping List</label>
    <nameField>
        <label>B2B Shopping List Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>B2B Shopping Lists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>