Perkin-UAT/force-app/main/default/objects/B2B_Shopping_List__c/fields/B2B_Default__c.field-meta.xml
<CustomField>
    <fullName>B2B_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To make shopping list default.</description>
    <label>B2B Default</label>
    <type>Checkbox</type>
</CustomField>