Perkin-UAT/force-app/main/default/objects/B2B_Shopping_List__c/fields/B2B_Description__c.field-meta.xml
<CustomField>
    <fullName>B2B_Description__c</fullName>
    <label>B2B Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>