Perkin-UAT/force-app/main/default/objects/B2B_Shopping_List__c/fields/B2B_Name__c.field-meta.xml
<CustomField>
    <fullName>B2B_Name__c</fullName>
    <label>B2B Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>