Perkin-UAT/force-app/main/default/objects/B2B_Shopping_List__c/fields/B2B_Public__c.field-meta.xml
<CustomField>
    <fullName>B2B_Public__c</fullName>
    <defaultValue>false</defaultValue>
    <label>B2B Public</label>
    <type>Checkbox</type>
</CustomField>