Perkin-UAT/force-app/main/default/objects/B2B_Shopping_List__c/fields/B2B_Public_List_URL__c.field-meta.xml
<CustomField>
    <fullName>B2B_Public_List_URL__c</fullName>
    <formula>IF(
  B2B_Public__c,
  $Label.B2B_Site_Public_Url_For_QR &amp; Id,
  $Label.B2B_Site_Custom_Url_For_QR &amp; Id
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>B2B Public List URL</label>
    <type>Text</type>
</CustomField>