Perkin-UAT/force-app/main/default/objects/B2B_Shopping_List__c/fields/QR_Code__c.field-meta.xml
<CustomField>
    <fullName>QR_Code__c</fullName>
    <formula>IF(
  B2B_Public__c,
  IMAGE(
    &quot;https://barcode.orcascan.com/?type=qr&amp;data=&quot; &amp;
    $Label.B2B_Site_Public_Url_For_QR &amp;
    Id &amp;
    &quot;&amp;text=&quot; &amp; B2B_Name__c,
    B2B_Name__c, 200, 160
  ),
  IMAGE(
    &quot;https://barcode.orcascan.com/?type=qr&amp;data=&quot; &amp;
    $Label.B2B_Site_Custom_Url_For_QR &amp;
    Id &amp;
    &quot;&amp;text=&quot; &amp; B2B_Name__c,
    B2B_Name__c, 200, 160
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QR Code</label>
    <type>Text</type>
</CustomField>