Perkin-UAT/force-app/main/default/objects/B2B_Shopping_List__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>B2B_Name__c</columns>
    <columns>B2B_Active__c</columns>
    <columns>B2B_Default__c</columns>
    <columns>B2B_Description__c</columns>
    <columns>B2B_Public__c</columns>
    <columns>B2B_Account__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>